--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="container">
         <div class="cursor" style="display:none"></div>
         <h1>Waqar Bugti</h1>
+        <h1>hello</h1>
     </div>
 
     <script src="script.js"></script>
