--- a/index.html
+++ b/index.html
@@ -1,18 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Intro</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-    <div id="container">
-        <div class="cursor" style="display:none"></div>
-        <h1>Waqar Bugti</h1>
-        <h1>hello</h1>
+
+<body id="container">
+    <header>
+        <div class="logo">
+            <h2>Waqar Baloch</h2>
+        </div>
+
+        <div class="menu-nav-hamburger"></div>
+    </header>
+
+    <div class="hero">
+        <p>
+            Turning
+            <span>
+                <svg viewBox="0 0 256 256" id="Flat" xmlns="http://www.w3.org/2000/svg">
+                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                    <g id="SVGRepo_iconCarrier">
+                        <path
+                            d="M72,164.0001a12,12,0,1,1-12-12A12,12,0,0,1,72,164.0001Zm124-60a12,12,0,1,0-12-12A12,12,0,0,0,196,104.0001Zm-136-24a12,12,0,1,0,12,12A12,12,0,0,0,60,80.0001Zm68,0a12,12,0,1,0,12,12A12,12,0,0,0,128,80.0001Zm68,72a12,12,0,1,0,12,12A12,12,0,0,0,196,152.0001Zm-68,0a12,12,0,1,0,12,12A12,12,0,0,0,128,152.0001Z">
+                        </path>
+                    </g>
+                </svg>
+                Pixels</span>
+            into
+            <span>
+                <svg viewBox="-2 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" >
+                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                    <g id="SVGRepo_iconCarrier">
+                        <g id="icomoon-ignore"></g>
+                        <path
+                            d="M27.467 10.667l-6.293-7.467h-14.4l-6.293 7.467-0.48 0.533 0.427 0.533 13.547 17.067 13.973-17.6-0.48-0.533zM26.080 10.667h-10.72l5.333-6.347 5.387 6.347zM13.92 10.667l-5.547-6.4h10.987l-5.44 6.4zM7.147 4.427l5.387 6.24h-10.667l5.28-6.24zM13.44 11.733v14.667l-11.68-14.667h11.68zM14.507 26.4v-14.667h11.627l-11.627 14.667z"
+                            ></path>
+                    </g>
+                </svg>
+                Perfection</span>
+        </p>
+        <h1>
+            Frontend Developer & <br />
+            Web UI UX Designer
+        </h1>
     </div>
+
+    <div class="cursor" style="display: none"></div>
 
     <script src="script.js"></script>
 </body>
+
 </html>
