--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h2>Waqar Baloch</h2>
         </div>
 
-        <div class="menu-nav-hamburger"></div>
+        <div class="menu-nav"></div>
     </header>
 
     <div class="hero">
@@ -32,16 +32,15 @@
                 </svg>
                 Pixels</span>
             into
-            <span>
-                <svg viewBox="-2 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink" >
+            <span class="diamond">
+                <svg viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
                     <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
                     <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
                     <g id="SVGRepo_iconCarrier">
-                        <g id="icomoon-ignore"></g>
+                        <title>gem</title>
                         <path
-                            d="M27.467 10.667l-6.293-7.467h-14.4l-6.293 7.467-0.48 0.533 0.427 0.533 13.547 17.067 13.973-17.6-0.48-0.533zM26.080 10.667h-10.72l5.333-6.347 5.387 6.347zM13.92 10.667l-5.547-6.4h10.987l-5.44 6.4zM7.147 4.427l5.387 6.24h-10.667l5.28-6.24zM13.44 11.733v14.667l-11.68-14.667h11.68zM14.507 26.4v-14.667h11.627l-11.627 14.667z"
-                            ></path>
+                            d="M30.749 9.993l-0.005-0.025c-0.008-0.14-0.055-0.268-0.13-0.374l0.002 0.002c-0.009-0.014-0.006-0.033-0.016-0.046l-6-8c-0.015-0.020-0.040-0.029-0.058-0.048-0.009-0.010-0.005-0.025-0.015-0.035-0.015-0.014-0.037-0.008-0.053-0.021-0.125-0.116-0.29-0.189-0.473-0.195l-0.001-0-16.012 0.003c-0.182 0.008-0.346 0.082-0.469 0.198l0-0c-0.015 0.013-0.038 0.007-0.053 0.022-0.009 0.009-0.005 0.024-0.013 0.033-0.016 0.017-0.039 0.025-0.053 0.044l-6 8c-0.010 0.014-0.007 0.032-0.016 0.046-0.073 0.105-0.12 0.232-0.128 0.371l-0 0.002-0.005 0.024-0.001 0.007c0.004 0.144 0.049 0.277 0.124 0.388l-0.002-0.003c0.008 0.014 0.004 0.031 0.014 0.044l14 20c0.137 0.195 0.361 0.32 0.614 0.32s0.477-0.126 0.613-0.318l0.002-0.002 14.001-20c0.010-0.014 0.005-0.032 0.014-0.046 0.072-0.108 0.117-0.24 0.121-0.382l0-0.001zM8.084 3.138l6.178 6.112h-10.762zM9.824 2.75h12.379l-6.122 6.19zM23.922 3.146l4.578 6.104h-10.616zM16 28.691l-12.56-17.941h25.12z">
+                        </path>
                     </g>
                 </svg>
                 Perfection</span>
