--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body id="container">
     <header id="header">
         <div class="logo">
-            <h2>Waqar Baloch</h2>
+            <h2>Waqar Baloch &nbsp; <span id="section-name"></span></h2>
         </div>
 
         <div class="menu-nav-container">
@@ -19,9 +19,8 @@
         </div>
     </header>
 
-    <div id="settingsModal" class="modal menu-nav-container" style="display:none;">
+    <div id="settingsModal" class="modal menu-nav-container" style="display: none">
         <div class="custom-modal-content">
-
             <div class="header-container">
                 <span class="close" id="closeSettings"><svg viewBox="0 0 24 24" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
@@ -53,10 +52,8 @@
                     <li>Gallery</li>
                 </a>
             </ul>
-
         </div>
     </div>
-
 
     <div class="hero">
         <p>
@@ -92,8 +89,85 @@
         </h1>
     </div>
 
-    <div id="aboutme" class="aboutme-container"  style="display:none;">
-        hello
+    <div id="aboutme" class="aboutme-container" style="display: none">
+        <div class="first-Aboutme-container">
+
+            <div class="aboutme-description">
+                <p>
+                    <span> Hey there!</span> My name is <span>Waqar Baloch</span> and
+                    I'm a web developer with a passion for creating seamless,
+                    captivating user experiences. I'm also a bit of a design nerd, and I
+                    love using tools like Adobe XD, Figma, Canva, and Spline to bring my
+                    designs to life.
+                </p>
+
+                <p>
+                    My journey in web development started <span>back in 2021</span> when
+                    I decided to try editing custom Tumblr themes. I quickly realized
+                    that hacking together a custom reblog button taught me a lot about
+                    HTML and CSS. From there, I fell in love with the process of
+                    building things for the web.
+                </p>
+
+                <p>
+                    Today, I'm focused on building accessible, inclusive products and
+                    digital experiences at
+                    <a href="https://bit.ly/46cWgBa" target="_blank" rel="noreferrer">Upwork</a>
+                    and
+                    <a href="https://www.fiverr.com/waqarbugti0" target="_blank" rel="noreferrer">Fiverr</a>
+                    for a variety of clients. I'm passionate about creating experiences
+                    that are not only visually stunning, but also intuitive and engaging
+                    for everyone.
+                </p>
+
+                <p>
+                    I'm a professional, but I'm also real and friendly. I love getting
+                    to know my clients and their businesses, and I'm always up for a
+                    challenge. If you're looking for a web developer who can help you
+                    create something truly special, I'm your guy!
+                </p>
+
+                <div class="external-btn-container">
+                    <a class="external-btn upwork-btn" href="https://bit.ly/46cWgBa" target="_blank"
+                        rel="noopener noreferrer"><svg width="64px" height="64px" viewBox="0 -179.5 512 512"
+                            version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                            preserveAspectRatio="xMidYMid" fill="#000000">
+                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                            <g id="SVGRepo_iconCarrier">
+                                <g>
+                                    <path
+                                        d="M140.106589,96.6278184 C131.785652,96.6278184 123.989458,93.1045388 116.905417,87.3698389 L118.629575,79.2737921 L118.704539,78.9739385 C120.241288,70.3531479 125.113909,55.8852123 140.106589,55.8852123 C151.351098,55.8852123 160.496633,65.0307467 160.496633,76.2752562 C160.459151,87.482284 151.313616,96.6278184 140.106589,96.6278184 L140.106589,96.6278184 Z M140.106589,35.2327965 C120.953441,35.2327965 106.110688,47.6767204 100.076135,68.1417277 C90.8556369,54.310981 83.884041,37.7065886 79.7985359,23.7259151 L59.1836018,23.7259151 L59.1836018,77.3622255 C59.1836018,87.9320644 50.5628111,96.5528551 39.9929722,96.5528551 C29.4231332,96.5528551 20.8023426,87.9320644 20.8023426,77.3622255 L20.8023426,23.7259151 L0.187408492,23.7259151 L0.187408492,77.3622255 C0.112445095,99.3265007 17.9912152,117.355198 39.9554905,117.355198 C61.9197657,117.355198 79.7985359,99.3265007 79.7985359,77.3622255 L79.7985359,68.3666179 C83.8090776,76.7250366 88.7191801,85.1584187 94.6787701,92.6547584 L82.0474378,152.025769 L103.149634,152.025769 L112.295168,108.959297 C120.316252,114.09429 129.53675,117.317716 140.106589,117.317716 C162.708053,117.317716 181.111567,98.801757 181.111567,76.2002928 C181.111567,53.6363104 162.708053,35.2327965 140.106589,35.2327965 L140.106589,35.2327965 Z"
+                                        fill="#6FDA44"></path>
+                                    <path
+                                        d="M244.043338,37.5566618 L257.349341,91.1929722 L272.004685,37.5566618 L289.471157,37.5566618 L266.944656,115.068814 L249.478184,115.068814 L235.647438,61.0951684 L221.854173,115.031332 L204.387701,115.031332 L181.861201,37.5191801 L199.327672,37.5191801 L213.983016,91.1554905 L227.289019,37.5191801 L244.043338,37.5191801 L244.043338,37.5566618 Z M331.26325,35.2327965 C308.586823,35.2327965 290.220791,53.6363104 290.220791,76.2752562 C290.220791,98.9516837 308.624305,117.317716 331.26325,117.317716 C353.939678,117.317716 372.343192,98.9516837 372.343192,76.2752562 C372.343192,53.5988287 353.939678,35.2327965 331.26325,35.2327965 Z M331.26325,100.450952 C317.919766,100.450952 307.125037,89.6562225 307.125037,76.3127379 C307.125037,62.9692533 317.957247,52.1745242 331.26325,52.1745242 C344.606735,52.1745242 355.401464,62.9692533 355.401464,76.3127379 C355.401464,89.6187408 344.606735,100.450952 331.26325,100.450952 Z M422.231332,54.9106881 C410.499561,54.9106881 401.016691,64.4310395 401.016691,76.1253294 L401.016691,115.031332 L383.437775,115.031332 L383.437775,37.5566618 L401.016691,37.5566618 L401.016691,49.4758419 C401.016691,49.4758419 408.513031,37.5191801 423.918009,37.5191801 L429.315373,37.5191801 L429.315373,54.9106881 L422.231332,54.9106881 Z M481.227526,73.2767204 C493.708931,66.2301611 502.179795,52.8491947 502.179795,37.5191801 L484.600878,37.5191801 C484.600878,50.450366 474.106003,60.9452416 461.174817,60.9452416 L458.81347,60.9452416 L458.81347,0.149926794 L441.234553,0.149926794 L441.234553,115.031332 L458.81347,115.031332 L458.81347,78.5241581 L460.912445,78.5241581 C462.636603,78.5241581 464.885505,79.6486091 465.897511,81.0354319 L490.860322,115.031332 L511.925037,115.031332 L481.227526,73.2767204 Z"
+                                        fill="#112240"></path>
+                                </g>
+                            </g>
+                        </svg>
+                        </a>
+
+                    <a class="external-btn fiverr-btn" href="https://www.fiverr.com/waqarbugti0" target="_blank"
+                        rel="noopener noreferrer"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50"
+                            height="50" viewBox="0,0,256,256" style="fill: #000000">
+                            <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+                                stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                                font-family="none" font-weight="none" font-size="none" text-anchor="none"
+                                style="mix-blend-mode: normal">
+                                <g transform="scale(5.12,5.12)">
+                                    <path
+                                        d="M41.86,21.321v-1.539h-2.919l-1.283,-0.022c-1.097,0 -1.847,0.722 -2.141,1.561v-1.539h-3.269v9.979h3.269v-2.14v-3.312c0,-0.995 0.806,-1.801 1.801,-1.801h1.274v7.253h3.269v-2.14v-3.312c0,-0.995 0.806,-1.801 1.801,-1.801h1.623v-2.726l-1.283,-0.022c-1.097,-0.001 -1.846,0.722 -2.142,1.561zM18.597,19.991l-1.754,5.767l-1.754,-5.767h-3.269l3.551,9.979h0.191h2.562h0.191l3.551,-9.979zM5.239,19.991v-0.665c0,-0.583 0.472,-1.055 1.055,-1.055h2.064v-2.737h-2.835c-1.962,0 -3.553,1.591 -3.553,3.553v0.905h-1.911v2.645h1.911v7.334h3.27v-7.334h3.118v7.334h3.269v-7.334v-2.645h-3.269h-3.119zM26.398,19.857h-0.398c-2.678,0 -4.849,2.171 -4.849,4.849v0.548c0,2.678 2.171,4.849 4.849,4.849h0.885c1.834,0 3.403,-1.132 4.048,-2.735l-2.884,-0.842c0,0 -0.345,0.988 -1.548,0.988c-1.358,0 -2.077,-0.744 -2.172,-1.586h-0.001v-0.005c-0.007,-0.061 -0.01,-0.123 -0.01,-0.185h3.688h3.242v-1.032c0,-2.678 -2.171,-4.849 -4.85,-4.849zM24.322,23.814c0.039,-0.897 0.777,-1.613 1.684,-1.613h0.312c0.907,0 1.645,0.716 1.684,1.613zM47.932,26.136c-1.123,0 -2.033,0.91 -2.033,2.033c0,1.123 0.91,2.033 2.033,2.033c1.123,0 2.033,-0.91 2.033,-2.033c-0.001,-1.123 -0.91,-2.033 -2.033,-2.033z">
+                                    </path>
+                                </g>
+                            </g>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+
+            <div class="aboutme-img"><img src="https://avatars.githubusercontent.com/u/82739413?v=4" alt="" srcset=""></div>
+
+        </div>
     </div>
 
     <div class="cursor" style="display: none"></div>
